removed postgres service

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,24 +3,24 @@
 
 services:
   # PostgreSQL Database
-  postgres:
-    image: postgres:15
-    container_name: erp-elite-postgres
-    environment:
-      POSTGRES_DB: elite
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - erp-elite-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+  # postgres:
+  #   image: postgres:15
+  #   container_name: erp-elite-postgres
+  #   environment:
+  #     POSTGRES_DB: elite
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: password
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   networks:
+  #     - erp-elite-network
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U postgres"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
 
   # NATS with JetStream
   nats:
@@ -98,11 +98,11 @@ services:
       - erp-elite-network
     restart: unless-stopped
     volumes:
-      - uploads_data:/app/public/uploads
+      # - uploads_data:/app/public/uploads
 
 volumes:
-  postgres_data:
-  uploads_data:
+  # postgres_data:
+  # uploads_data:
 
 networks:
   erp-elite-network:
