--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -97,12 +97,12 @@ services:
     networks:
       - erp-elite-network
     restart: unless-stopped
-    volumes:
-      # - uploads_data:/app/public/uploads
+    # volumes:
+    #   # - uploads_data:/app/public/uploads
 
-volumes:
-  # postgres_data:
-  # uploads_data:
+# volumes:
+#   # postgres_data:
+#   # uploads_data:
 
 networks:
   erp-elite-network:
