--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,13 @@
 # Database
 DATABASE_URL="postgresql://postgres:password@postgres:5432/elite"
 
+FRONTEND_DOMAIN=erp.com.co
+BACKEND_DOMAIN=erp.com.co
+
 # Frontend Configuration
 BETTER_AUTH_SECRET=changeme123
-BETTER_AUTH_URL=http://localhost:3000
-NEXT_PUBLIC_SOCKET_URL=http://localhost:3001
+BETTER_AUTH_URL=${FRONTEND_DOMAIN}
+NEXT_PUBLIC_SOCKET_URL=${BACKEND_DOMAIN}
 
 # Backend Configuration
 PORT=3001
