--- a/erp-elite-next/Dockerfile
+++ b/erp-elite-next/Dockerfile
@@ -10,7 +10,9 @@ RUN --mount=type=cache,target=/root/.bun/install/cache bun install --frozen-lock
 
 # Build the application
 FROM base AS builder
+ARG NEXT_PUBLIC_API_URL
 ARG NEXT_PUBLIC_SOCKET_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_SOCKET_URL=$NEXT_PUBLIC_SOCKET_URL
 
 COPY --from=deps /app/node_modules ./node_modules
