--- a/.env.prod
+++ b/.env.prod
@@ -7,6 +7,7 @@ BACKEND_DOMAIN=erp.com.co
 # Frontend Configuration
 BETTER_AUTH_SECRET=changeme123
 BETTER_AUTH_URL=${FRONTEND_DOMAIN}
+NEXT_PUBLIC_API_URL=http://localhost:3001
 NEXT_PUBLIC_SOCKET_URL=${BACKEND_DOMAIN}
 
 # Backend Configuration
